# Currency-ETL

./: .gitignore  README.md  currency.postman_collection.json
app/: Dockerfile  alembic.ini  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2022_12_08_00_23_b9b53b0aee16_first_migration.py
app/auth/: auth_bearer.py  handler.py
app/core/: settings.py
app/exceptions/: application.py  bad_request.py
app/orm/: database.py
app/orm/models/: __init__.py  currency.py  user.py
app/orm/schemas/: currency.py  user.py
app/routers/: __init__.py  currency.py  users.py
app/services/: currency_services.py  user_services.py
functions/: currency_request.py  currency_schema.py  requirements.txt  xml_parser.py
